# RCJ2024

./: .gitignore  .gitmodules  README.md
src/: CMakeLists.txt
src/ai/: .gitignore  CMakeLists.txt  llm.py  main.cpp  main2.cpp  prompt.txt  simple-ss.cpp
src/ai/include/: llm.hpp  pa.hpp  renderer.hpp  sd.hpp  tts.hpp  window.hpp
src/ai/lib/: CMakeLists.txt
src/ai/src/: llm.cpp  renderer.cpp  sd.cpp  tts.cpp  window.cpp
src/backend/: .gitignore  CMakeLists.txt  README.md  get.sh  main.cpp  main2.cpp  prompt.txt
src/backend/include/: callback.hpp  llm.hpp  sd.hpp  server.hpp
src/backend/lib/include/: sd.hpp  server.h  server.hpp
src/backend/lib/src/: llm.cpp  server.cpp  tts.cpp
src/backend/models/: get.sh
src/backend/src/: llm.cpp  piper.cpp  sd.cpp  serial.cpp  server.c  server.cpp  stt.c  stt.cpp  tts.cpp
src/backend/src/include/: llm.hpp  piper.hpp  sd.hpp  serial.hpp  server.hpp  stt.hpp  tts.hpp
src/frontend/: .gitignore  CMakeLists.txt  README.md  get.sh  main.c  main.cpp
src/frontend/include/: callbacks.h  client.hpp  image.h  log.hpp  render.h  session.h  stt.hpp  tts.hpp
src/frontend/lib/include/: aaudio.h  client.h  stt.h  tts.h  yolo.h
src/frontend/lib/src/: aaudio.c  client.c  piper.cpp
src/frontend/nop/: tts.c  tts.h
src/frontend/res/: mealr-design.kra
src/frontend/src/: client.c  client.cpp  piper.cpp  serial.c  tts.cpp  yolo.c
src/frontend/src/include/: client.h  serial.h  yolo.h
src/hardware/: CMakeLists.txt  README.md
src/hardware/lib/servo/: CMakeLists.txt  servo.h
src/hardware/lib/tb6600/: CMakeLists.txt  tb6600.c
src/hardware/main/: CMakeLists.txt  main.c
src/hardware/main/include/: pose.h
src/hardware/main/src/: base.c  pose.c
src/hardware/ttt/: CMakeLists.txt  main.c
src/llm/: prompt.txt
src/llm-chat/: .gitignore  CMakeLists.txt  README.md  main.cpp  main2.cpp  main3.cpp  simple-chat.cpp  simple-openal.cpp  simple-ss.cpp
src/llm-chat/include/: al.hpp  client.hpp  llm.hpp  sd-client.hpp  sd-server.hpp  stt.hpp
src/llm-chat/prompts/: en-v2.txt  en-v3.txt  en-v4.txt  hu-v1.txt  prompt-en.txt
src/llm-chat/src/: al.cpp  client.cpp  llm.cpp  log.cpp  piper.cpp  sd-client.cpp  sd-server.cpp  stt.cpp  tts.cpp
src/mcu/: CMakeLists.txt
src/mcu/dyn_test/: CMakeLists.txt  main.c
src/mcu/lib/: CMakeLists.txt
src/mcu/lib/servo/: servo.c  servo.h
src/mcu/main/: CMakeLists.txt  config.h  main.c  servo-stuff.h
src/mcu/main/include/: anim.h  base.h
src/mcu/main/src/: anim.c  base.c  pose.c
src/pose-sim/: .gitignore  CMakeLists.txt  README.md  template.pose  test.pose
src/pose-sim/src/: main.cpp  pose.cpp  server.cpp
src/pose-sim/src/include/: pose.hpp  server.hpp
src/sd-server/: .gitignore  CMakeLists.txt  README.md  main.cpp
src/sd-server/include/: renderer.hpp  sd-server.hpp  sd.hpp
src/sd-server/shader/: main.fs  main.vs
src/sd-server/src/: renderer.cpp  sd-server.cpp  sd.cpp  window.cpp
